working on tech stack section

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ hr {
 
 /* header */
 .header {
-  height: 15rem;
+  height: 12rem;
   /* background-image: url('./images/matt-duncan-IUY_3DvM__w-unsplash.png');
     background-position: center; */
   /* add opacity */
@@ -47,6 +47,7 @@ hr {
 }
 .explore-box h3 {
     background: none;
+    color:rgba(253, 228, 191, 0.849)
 }
 /* projects */
 
